--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <div id="viz"></div>
     <script>
-      d3.text("tmp.csv", function(datasetText) {
+      d3.text("data.csv", function(datasetText) {
 
       var parsedCSV = d3.csv.parseRows(datasetText);
       
